# SIH_Train_AI_backend

./: .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  example_usage.py  pyproject.toml  requirements.txt
alembic/: README  env.py
alembic/versions/: 20250912_142837_add_timezone_to_schedule_times.py  add_train_sub_type_field.py  change_schedule_and_override_train_id_to_varchar.py
app/: main.py
app/api/routes/: map_simulation.py  metrics.py  schedule.py  settings.py  websocket.py
app/core/: config.py  dependencies.py
app/db/: base.py  models.py  session.py
app/models/: metrics.py  override.py  schedule.py  section.py  settings.py  train.py  user.py
app/schemas/: __init__.py  metrics.py  override.py  schedule.py  train.py
app/services/optimization/: constraints.py  models.py  optimizer.py
app/tests/: conftest.py  test_api.py  test_optimization.py
data/: sample_trains.json
